make sure charts have height on mobile widths ... easy breezy 16x9

--- a/src/static/global.css
+++ b/src/static/global.css
@@ -155,6 +155,8 @@ a {
 	flex: 1 1;
 	position: relative;
 	transition: background var(--speed-transition) ease-in-out;
+	aspect-ratio: 16 / 9;
+	min-height: 200px;
 }
 .chart__container {
 	position: absolute;
